FRONT - Crear (y editar) grupo + un poco de orden

--- a/web-app/css/comments.css
+++ b/web-app/css/comments.css
@@ -255,6 +255,18 @@
 	overflow: auto;
 }
 
+#loginForm select{
+    padding: 10px 15px;
+    background: #eaeaea;
+    color: #484848;
+    border: 1px  solid #ccc;
+    font-size: 13px;
+    font-family: Helvetica, Arial;
+    line-height: 1.5em;
+
+    overflow: auto;
+}
+
 #commentFilm input:focus,
 #commentFilm textarea:focus,
 #contactForm input:focus,
@@ -262,6 +274,7 @@
 #commentform input:focus,
 #commentform textarea:focus,
 #loginForm input:focus,
+#loginForm select:focus,
 #registerForm input:focus{
 	background: #fff;
 	-webkit-box-shadow: 0px 0px 3px rgba(234,76,136,.4);
@@ -274,6 +287,7 @@
 #contactForm input[type="text"],
 #commentform input[type="text"],
 #loginForm input,
+#loginForm select,
 #registerForm input{
 	overflow: auto;
 	width: 200px;
