FRONT - Mostrar peliculas + Mucho orden y limpieza y templates comunes

--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -748,6 +748,16 @@ nav a{
 	
 }
 
+/* MOVIES ------------------------------------------------------------*/
+
+.movie-poster {
+    width: 120px;
+    height: 160px;
+}
+
+
+
+
 /* BLOG ------------------------------------------------------------*/
 
 .floated-content,
