--- a/web-app/css/comments.css
+++ b/web-app/css/comments.css
@@ -103,7 +103,7 @@
 
 
 
-.comment .children li{ background: url(../img/reply.png) no-repeat 10px 40px;  }
+.comment .children li{ background: url(../img/arrows.png) no-repeat 10px 40px;  }
 
 .comment .children .comment-body { 
 	margin: 20px 0 0 50px;
@@ -223,7 +223,8 @@
 }
 
 #loginForm,
-#registerForm{
+#registerForm,
+#normalForm{
 	color: #484848;
 }
 
@@ -243,7 +244,8 @@
 #commentform input,
 #commentform textarea,
 #loginForm input,
-#registerForm input{
+#registerForm input,
+#normalForm input{
 	padding: 10px 15px;
 	background: #eaeaea;
 	color: #484848;
@@ -255,17 +257,6 @@
 	overflow: auto;
 }
 
-#loginForm select{
-    padding: 10px 15px;
-    background: #eaeaea;
-    color: #484848;
-    border: 1px  solid #ccc;
-    font-size: 13px;
-    font-family: Helvetica, Arial;
-    line-height: 1.5em;
-
-    overflow: auto;
-}
 
 #commentFilm input:focus,
 #commentFilm textarea:focus,
@@ -274,8 +265,9 @@
 #commentform input:focus,
 #commentform textarea:focus,
 #loginForm input:focus,
-#loginForm select:focus,
-#registerForm input:focus{
+#normalForm select:focus,
+#normalForm input:focus,
+#registerForm input:focus,{
 	background: #fff;
 	-webkit-box-shadow: 0px 0px 3px rgba(234,76,136,.4);
 	-moz-box-shadow: 0px 0px 3px rgba(234,76,136,.4);
@@ -287,13 +279,27 @@
 #contactForm input[type="text"],
 #commentform input[type="text"],
 #loginForm input,
-#loginForm select,
+#normalForm select,
+#normalForm input[type="text"],
 #registerForm input{
 	overflow: auto;
 	width: 200px;
 	margin-bottom: 20px;
 	
 	overflow: hidden;
+}
+
+#normalForm select{
+    padding: 10px 15px;
+    background: #eaeaea;
+    color: #484848;
+    border: 1px  solid #ccc;
+    font-size: 13px;
+    font-family: Helvetica, Arial;
+    line-height: 1.5em;
+    width: 232px;
+
+    overflow: auto;
 }
 
 #commentFilm  textarea,
@@ -331,6 +337,7 @@
 	 cursor: pointer;
 }
 
+#normalForm input[type="submit"],
 #registerForm input[type="submit"],
 #loginForm input[type="submit"],
 #loginForm input[type="button"] {
