--- a/web-app/css/comments.css
+++ b/web-app/css/comments.css
@@ -267,7 +267,7 @@
 #loginForm input:focus,
 #normalForm select:focus,
 #normalForm input:focus,
-#registerForm input:focus,{
+#registerForm input:focus{
 	background: #fff;
 	-webkit-box-shadow: 0px 0px 3px rgba(234,76,136,.4);
 	-moz-box-shadow: 0px 0px 3px rgba(234,76,136,.4);
