FRONT - Poner mas lindo

--- a/web-app/css/comments.css
+++ b/web-app/css/comments.css
@@ -339,6 +339,7 @@
 
 .normalButton,
 #normalForm input[type="submit"],
+#normalForm input[type="button"],
 #registerForm input[type="submit"],
 #loginForm input[type="submit"],
 #loginForm input[type="button"] {
