--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -854,7 +854,8 @@ nav a{
 	margin-bottom: 20px;
 }
 
-article .meta div{
+article .meta div,
+.group-user {
 	padding: 15px 10px 15px 30px;
 	float: left;
 	max-width: 170px;
@@ -866,7 +867,8 @@ article .meta .comments{
 	background: url(../img/icon-comments.png) no-repeat;
 }
 
-article .meta .user{
+article .meta .user,
+.group-user {
 	background: url(../img/icon-user.png) no-repeat;
 }
 
@@ -876,8 +878,13 @@ article .meta .categories{
 
 article .meta .categories,
 article .meta .comments,
-article .meta .user{
+article .meta .user,
+.group-user {
 	background-position: 5px 12px;	
+}
+
+.margin-bottom {
+    margin-bottom: 20px;
 }
 
 /* SINGLE ------------------------------------------------------------*/
